--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
 
         function drawChart(array) {
-            ctx.fillStyle = '#ffb1b1';
+            ctx.fillStyle = '##f4cccc';
             ctx.fillRect(0, 0, c.width, c.height);
 
             ctx.fillStyle = 'black';
@@ -95,3 +95,4 @@
     </script>
 </body>
 </html>
+
