--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
 
         function drawChart(array) {
-            ctx.fillStyle = '##f4cccc';
+            ctx.fillStyle = '#f4cccc';
             ctx.fillRect(0, 0, c.width, c.height);
 
             ctx.fillStyle = 'black';
